--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,7 +49,7 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --background: #FAF9F6;
   --foreground: oklch(0.147 0.004 49.25);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.147 0.004 49.25);
@@ -83,7 +83,7 @@
 }
 
 .dark {
-  --background: oklch(0.147 0.004 49.25);
+  --background: #0c0c0c;
   --foreground: oklch(0.985 0.001 106.423);
   --card: oklch(0.216 0.006 56.043);
   --card-foreground: oklch(0.985 0.001 106.423);
